css/base.css
.pardus-software-listbox{
    background-color:transparent;
}

/*
.pardus-software-flowbox flowboxchild{
    background-color:transparent;
}
*/


/*
.pardus-software-listbox{
    background-color:alpha(@unfocused_borders, 0.3);
}

list row:hover{
    background-color:alpha(@unfocused_borders, 0.5);;

}

list row {
    margin: 0px;
}*/

.pardus-software-accent-label{
    color: @accent_bg_color;
}

.pardus-software-comment-textview text{
    background-color: alpha(@unfocused_borders, 0.45);;
    border-radius: 8px;
}

.rating-progressbar progress {
    background-color: #FFB400;
}

.pardus-software-frame > border{
    border-radius: 8px;
}


.pardus-software-listbox{
    background-color:alpha(@unfocused_borders, 0.3);
}

.pardus-software-listbox row:hover{
    background-color:alpha(@unfocused_borders, 0.5);;

}

.pardus-software-listbox row {
    margin: 0px;
}

/*
.pardus-software-left-cats-flowbox{
    background-color:alpha(@unfocused_borders, 0.3);
    border-radius:8px;
}
*/

.pardus-software-left-cats-box{
    background-color:alpha(@unfocused_borders, 0.3);
    /*border-radius:8px;*/
}
.pardus-software-left-cats-box:backdrop{
    background-color:alpha(@unfocused_borders, 0.1);
}

.pardus-software-left-cats-listbox{
    background-color:transparent;
    border-radius:8px;
}

.pardus-software-left-cats-listbox row{
    margin-bottom: 8px;
}

.pardus-software-left-cats-listbox row:hover, row:selected{
    border-radius:8px;
}

.pardus-software-left-updates-count-box {
    background-color: alpha(@theme_selected_bg_color, 0.2);
    border-radius: 8px;
    border: 1px solid @theme_selected_bg_color;
    color: @theme_selected_bg_color;
}

.pardus-software-mostapp-empty-label{
    color:transparent;
    padding-top: 0px;
    padding-right: 0px;
    padding-bottom: 0px;
    padding-left: 0px;
    margin-bottom: -5px;
}

.pardus-software-mostapp-number-label{
    margin-left: -5px;
    margin-top: -5px;
    background-color: @theme_bg_color;
    border-radius: 8px;
    padding: 3px 5px 3px 5px;
}

.pardus-software-mostapp-action-button{
    padding: 1px 5px 1px 5px;
    margin: 0px;
    /*border-width: 0px;*/
    min-height: 0px;
    min-width: 0px;
}

.pardus-software-apps-action-button{
    padding: 0px 3px 0px 3px;
    margin: 0px;
    margin-top: -5px;

}

.pardus-software-listbox-mostdown{
    background-color:transparent;
}

.pardus-software-listbox-mostdown row {
    margin: 0px;
    padding: 0px;
}

.pardus-software-listbox-mostdown row:hover{
    background-color: alpha(@unfocused_borders, 0.5);
}

.pardus-software-mostdown-bottom-seperator{
    margin: 0px;
}

.pardus-software-mostapp-icon{
    background-color: alpha(@unfocused_borders, 0.3);
    border-radius: 8px;
    padding: 8px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
}

.pardus-software-editorapp-icon{
    border-radius: 8px;
    background-color: alpha(@unfocused_borders, 0.5);
    border-radius: 8px;
    padding: 8px;
}
/*
headerbar {
    border-bottom: none;
    box-shadow: none;
}
*/
button.openup-action { color: @accent_bg_color; outline-color: alpha(@accent_color, 0.5); background-color: mix(@accent_bg_color, @accent_fg_color, 0.86); }
button.openup-action:hover { color: @accent_bg_color; background-color: mix(@accent_bg_color, @accent_fg_color, 0.81); box-shadow: none; }
button.openup-action:active, button.openable-action:checked { color: @accent_bg_color; background-color: mix(@accent_bg_color, @accent_fg_color, 0.77); box-shadow: none; text-shadow: none; -gtk-icon-shadow: none; }
button.openup-action:disabled { color: mix(@window_fg_color, @window_bg_color, 0.5); background-color: mix(currentColor, @window_bg_color,0.9); text-shadow: none; -gtk-icon-shadow: none; box-shadow: none; }


.headersep{
 margin: 0px;
}

/*
button.upgradable-action {
  color: white;
  outline-color: rgba(255, 255, 255, 0.3);
  border-color: #cc6100;
  border-bottom-color: #994800;
  background-image: linear-gradient(to top, #e66d00 2px, #ff7800);
  text-shadow: 0 -1px rgba(0, 0, 0, 0.55);
  -gtk-icon-shadow: 0 -1px rgba(0, 0, 0, 0.55);
  box-shadow: inset 0 1px rgba(255, 255, 255, 0.2),
              0 1px 2px rgba(0, 0, 0, 0.07);
}

button.upgradable-action.flat {
  border-color: transparent;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  text-shadow: none;
  -gtk-icon-shadow: none;
  color: #ff7800;
}

button.upgradable-action:hover {
  color: white;
  outline-color: rgba(255, 255, 255, 0.3);
  border-color: #cc6100;
  border-bottom-color: #994800;
  background-image: linear-gradient(to top, #ff8f33, #ff7800 1px);
  text-shadow: 0 -1px rgba(0, 0, 0, 0.5);
  -gtk-icon-shadow: 0 -1px rgba(0, 0, 0, 0.5);
  box-shadow: inset 0 1px rgba(255, 255, 255, 0.2),
              0 1px 2px rgba(0, 0, 0, 0.07);
}

button.upgradable-action:active,
button.upgradable-action:checked {
  color: white;
  outline-color: rgba(255, 255, 255, 0.3);
  border-color: #994800;
  background-image: image(#cc6100);
  box-shadow: none;
  text-shadow: none;
  -gtk-icon-shadow: none;
}

button.upgradable-action:backdrop,
button.upgradable-action.flat:backdrop {
  color: #ffd7b3;
  border-color: #ff7800;
  background-image: image(#ff7800);
  text-shadow: none;
  -gtk-icon-shadow: none;
  box-shadow: none;
}

button.upgradable-action:backdrop:active,
button.upgradable-action:backdrop:checked,
button.upgradable-action.flat:backdrop:active,
button.upgradable-action.flat:backdrop:checked {
  color: #ffc180;
  border-color: #e66d00;
  background-image: image(#e66d00);
  box-shadow: none;
}

button.upgradable-action:backdrop:disabled,
button.upgradable-action.flat:backdrop:disabled {
  color: #d4cfca;
  border-color: #d5d0cc;
  background-image: image(#faf9f8);
  text-shadow: none;
  -gtk-icon-shadow: none;
  box-shadow: none;
}

button.upgradable-action:backdrop:disabled:active,
button.upgradable-action:backdrop:disabled:checked,
button.upgradable-action.flat:backdrop:disabled:active,
button.upgradable-action.flat:backdrop:disabled:checked {
  color: #ffb366;
  border-color: #cc6100;
  background-image: image(#cc6100);
  box-shadow: none;
}

button.upgradable-action.flat:backdrop,
button.upgradable-action.flat:disabled,
button.upgradable-action.flat:backdrop:disabled {
  border-color: transparent;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  text-shadow: none;
  -gtk-icon-shadow: none;
  color: rgba(255, 120, 0, 0.8);
}

button.upgradable-action:disabled {
  color: #929595;
  border-color: #cdc7c2;
  background-image: image(#faf9f8);
  text-shadow: none;
  -gtk-icon-shadow: none;
  box-shadow: none;
}

button.upgradable-action:disabled:active,
button.upgradable-action:disabled:checked {
  color: #ffb366;
  border-color: #cc6100;
  background-image: image(#cc6100);
  box-shadow: none;
}

button.openable-action {
  color: #1c71d8;
  outline-color: rgba(28, 113, 216, 0.2);
  border-color: #cfdff5;
  border-bottom-color: #b7cdec;
  background-image: linear-gradient(to top, #f2f6fc 2px, #e8f0fb);
  text-shadow: none;
  -gtk-icon-shadow: none;
  box-shadow: inset 0 1px rgba(255, 255, 255, 0.6),
              0 1px 2px rgba(0, 0, 0, 0.05);
}

button.openable-action.flat {
  border-color: transparent;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  text-shadow: none;
  -gtk-icon-shadow: none;
  color: #1c71d8;
}

button.openable-action:hover {
  color: #1c71d8;
  outline-color: rgba(28, 113, 216, 0.25);
  border-color: #cfdff5;
  border-bottom-color: #b7cdec;
  background-image: linear-gradient(to top, #e0ebfa, #f2f6fc 1px);
  text-shadow: none;
  -gtk-icon-shadow: none;
  box-shadow: inset 0 1px rgba(255, 255, 255, 0.7),
              0 1px 3px rgba(0, 0, 0, 0.08);
}

button.openable-action:active,
button.openable-action:checked {
  color: #1c71d8;
  outline-color: rgba(20, 82, 152, 0.25);
  border-color: #d4dbe8;
  border-bottom-color: #c7d2e2;
  background-image: linear-gradient(to top, #e0e6f2 2px, #d3dced);
  box-shadow: none;
  text-shadow: none;
  -gtk-icon-shadow: none;
}

button.openable-action:backdrop,
button.openable-action.flat:backdrop {
  color: #7fa6e3;
  border-color: #d8e4f8;
  background-image: image(#f2f6fc);
  text-shadow: none;
  -gtk-icon-shadow: none;
  box-shadow: none;
}

button.openable-action:backdrop:active,
button.openable-action:backdrop:checked,
button.openable-action.flat:backdrop:active,
button.openable-action.flat:backdrop:checked {
  color: white;
  border-color: #1c71d8;
  background-image: image(#1c71d8);
  box-shadow: none;
}

button.openable-action:backdrop:disabled,
button.openable-action.flat:backdrop:disabled {
  color: #b8b8b8;
  border-color: #e2e6f2;
  background-image: image(#faf9f8);
  text-shadow: none;
  -gtk-icon-shadow: none;
  box-shadow: none;
}

button.openable-action:backdrop:disabled:active,
button.openable-action:backdrop:disabled:checked,
button.openable-action.flat:backdrop:disabled:active,
button.openable-action.flat:backdrop:disabled:checked {
  color: #a3c2e8;
  border-color: #cfdff5;
  background-image: image(#cfdff5);
  box-shadow: none;
}

button.openable-action.flat:backdrop,
button.openable-action.flat:disabled,
button.openable-action.flat:backdrop:disabled {
  border-color: transparent;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  text-shadow: none;
  -gtk-icon-shadow: none;
  color: rgba(28, 113, 216, 0.8);
}

button.openable-action:disabled {
  color: #929595;
  border-color: #e2e6f2;
  background-image: image(#faf9f8);
  text-shadow: none;
  -gtk-icon-shadow: none;
  box-shadow: none;
}

button.openable-action:disabled:active,
button.openable-action:disabled:checked {
  color: #a3c2e8;
  border-color: #cfdff5;
  background-image: image(#cfdff5);
  box-shadow: none;
}
*/

